--- a/Windows/system/Terminal/settings.json
+++ b/Windows/system/Terminal/settings.json
@@ -8,7 +8,7 @@
 {
     "$schema": "https://aka.ms/terminal-profiles-schema",
 
-    "defaultProfile": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
+    "defaultProfile": "{60c3e313-8e1a-58f6-8175-3650c2bd2b26}",
 
     // You can add more global application settings here.
     // To learn more about global settings, visit https://aka.ms/terminal-global-settings
@@ -31,26 +31,28 @@
         "defaults":
         {
             // Put settings here that you want to apply to all profiles.
-            "fontFace": "Microsoft YaHei Mono",
-            "fontSize": 12,
+            "font": {
+              "face": "Microsoft YaHei Mono",
+              "size": 12,
+            },
             "useAcrylic": true,
             "acrylicOpacity": 0.75
         },
         "list":
         [
             {
-                "guid": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
-                "hidden": false,
-                "name": "Ubuntu-20.04",
-                "source": "Windows.Terminal.Wsl"
+                "guid": "{60c3e313-8e1a-58f6-8175-3650c2bd2b26}",
+                "name": "Ubuntu 22.04 LTS",
+                "source": "CanonicalGroupLimited.Ubuntu22.04LTS_79rhkp1fndgsc",
+                "hidden": false
             },
             {
                 // Make changes here to the powershell.exe profile.
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "name": "Windows PowerShell",
                 "commandline": "powershell.exe",
-                "hidden": false,
-                "background": "#012456"
+                "background": "#012456",
+                "hidden": false
             },
             {
                 // Make changes here to the cmd.exe profile.
@@ -61,9 +63,9 @@
             },
             {
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-                "hidden": false,
                 "name": "Azure Cloud Shell",
-                "source": "Windows.Terminal.Azure"
+                "source": "Windows.Terminal.Azure",
+                "hidden": false
             }
         ]
     },
@@ -80,7 +82,7 @@
         // Copy and paste are bound to Ctrl+Shift+C and Ctrl+Shift+V in your defaults.json.
         // These two lines additionally bind them to Ctrl+C and Ctrl+V.
         // To learn more about selection, visit https://aka.ms/terminal-selection
-        { "command": {"action": "copy", "singleLine": false }, "keys": "ctrl+c" },
+        { "command": { "action": "copy", "singleLine": false }, "keys": "ctrl+c" },
         { "command": "paste", "keys": "ctrl+v" },
 
         // Press Ctrl+Shift+F to open the search box
