--- a/Windows/system/Terminal/settings.json
+++ b/Windows/system/Terminal/settings.json
@@ -8,7 +8,7 @@
 {
     "$schema": "https://aka.ms/terminal-profiles-schema",
 
-    "defaultProfile": "{60c3e313-8e1a-58f6-8175-3650c2bd2b26}",
+    "defaultProfile": "{d7b20cea-47a9-518c-95a4-c8bd91e2e1c6}",
 
     // You can add more global application settings here.
     // To learn more about global settings, visit https://aka.ms/terminal-global-settings
@@ -35,14 +35,14 @@
               "face": "Microsoft YaHei Mono",
               "size": 12,
             },
-            "useAcrylic": true,
-            "acrylicOpacity": 0.75
+            "opacity": 75,
+            "useAcrylic": true
         },
         "list":
         [
             {
-                "guid": "{60c3e313-8e1a-58f6-8175-3650c2bd2b26}",
-                "name": "Ubuntu 22.04 LTS",
+                "guid": "{d7b20cea-47a9-518c-95a4-c8bd91e2e1c6}",
+                "name": "Ubuntu 22.04.2 LTS",
                 "source": "CanonicalGroupLimited.Ubuntu22.04LTS_79rhkp1fndgsc",
                 "hidden": false
             },
