windows: [app] update settings for vscode

--- a/Windows/apps/VSCode/settings.json
+++ b/Windows/apps/VSCode/settings.json
@@ -1,12 +1,13 @@
 {
     "workbench.startupEditor": "none",
-    "workbench.activityBar.visible": false,
+    "workbench.activityBar.location": "hidden",
     "workbench.colorTheme": "Material Theme Palenight",
     "workbench.iconTheme": "eq-material-theme-icons-palenight",
     "workbench.tree.indent": 14,
     "workbench.editor.untitled.hint": "hidden",
     "window.enableMenuBarMnemonics": false,
     "window.zoomLevel": 1,
+    "window.commandCenter": false,
     "editor.fontFamily": "'Microsoft YaHei Mono', Consolas, 'Courier New', monospace",
     "editor.tabSize": 2,
     "editor.renderWhitespace": "trailing",
