windows: [app] update settings for vscode

--- a/Windows/apps/VSCode/settings.json
+++ b/Windows/apps/VSCode/settings.json
@@ -4,10 +4,11 @@
     "workbench.colorTheme": "Material Theme Palenight",
     "workbench.iconTheme": "eq-material-theme-icons-palenight",
     "workbench.tree.indent": 14,
-    "workbench.editor.untitled.hint": "hidden",
+    "workbench.editor.empty.hint": "hidden",
     "window.enableMenuBarMnemonics": false,
     "window.zoomLevel": 1,
     "window.commandCenter": false,
+    "breadcrumbs.enabled": false,
     "editor.fontFamily": "'Microsoft YaHei Mono', Consolas, 'Courier New', monospace",
     "editor.tabSize": 2,
     "editor.renderWhitespace": "trailing",
